

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-June-2010 Christophe Demko
 # Fixed ussue [#20805] Module linked to menu links (Aytug AKAR, Nikolai Plath, bill richardson)
 # Fixed issue [#20820] menu create - single contact typo error (bill richardson)
 # Fixed issue [#20789] featured contacts (bill richardson)
 # Fixed issue [#20819] Incorrect Label on Access Level Filter box on User Manager Access Level Screen (Ian McLennan)

02-June-2010 Jean-Marie Simonet
# [#20787] some misc html typos. Thanks Phil.
# [#20677] duplicate key error. Thanks Nicholas.
# [#20506] Field required: cache_handler - message in Global Config. Thanks Christophe and Klas
# [#20809] Unable to run installation in IE8. Thanks Ian
 
02-June-2010 Andrew Eddie
 # Fixed issue [#20771] validate.js causing problems with IE8 (Bill Richardson, Phil Snell).
 # Fixed issue [#20788] Error when saving template style for administrator template.

02-June-2010 Christophe Demko
 # Corrected the atomic template since its index.php file is not a correct xml file
 # Fixed issue [#20758] Property root_user in configuration could be a big security breach. (thanks Henrik Hussfelt, Martin Blodau, Andrew Eddie).
 # Fixed issue [#20795] user profile plugin typo error (thanks bill richardson)
 # Fixed issue [#20783] A lot of issues related to searching and language switcher
 # Fixed issue [#12757] JDate override problem in Backend
 # Fixed issue [#20784] Some minor errors in the beez* templates

01-June-2010 Jean-Marie Simonet
# [#20724] HTTP Directory Listing. Thanks Amy.
# [#20521] usability issue: Item ID not visible during edit. Thanks Tim.
# [#20741] error in profile plugin manifest. Thanks Nicholai.and Boris.