@@ -101,8 +101,7 @@ $listDirn	= $this->state->get('list.direction');
 						?>
 
 						<li><a class="modal" href="<?php echo JRoute::_('index.php?option=com_modules&task=module.edit&id='.$module->id.'&return='.$return.'&tmpl=component&layout=modal');?>" rel="{handler: 'iframe', size: {x: 1024, y: 450}}"  title="<?php echo JText::_('COM_MENUS_EDIT_MODULE_SETTINGS');?>">
-						<?php echo $this->escape($module->title); ?></a>
-						<span class="smallsub">(<?php echo $this->escape($module->position);?>)</span></li>
+						<?php echo JText::sprintf('COM_MENUS_MODULE_ACCESS_POSITION', $this->escape($module->title), $this->escape($module->access_title), $this->escape($module->position)); ?></a></li>
 						<?php
 						endforeach;
 					endif;
