@@ -79,9 +79,6 @@ COM_MENUS_ITEM_FIELD_TYPE_LABEL="Menu Item Type"
 COM_MENUS_ITEM_IS_DEFAULT="Is default"
 COM_MENUS_ITEM_MENUTYPE_DESC="MenuType Desc"
 COM_MENUS_ITEM_MENUTYPE_LABEL="Contained in Menu"
-; in the following string
-; %1$s is for module title, %2$s is for access-title, %3$s is for position
-COM_MENUS_ITEM_MODULE_ACCESS_POSITION="%1$s <small>(%2$s in %3$s)</small>"
 COM_MENUS_ITEM_MODULE_ASSIGNMENT="Module Assignment for this Menu Item"
 COM_MENUS_ITEM_OPTIONS="Menu Item Options"
 COM_MENUS_ITEM_OPTIONS="Options"
@@ -108,6 +105,9 @@ COM_MENUS_MENU_SAVE_SUCCESS="Menu successfully saved"
 COM_MENUS_MENU_TITLE_DESC="The title of the menu to display in the Administrator Menubar and lists."
 COM_MENUS_MENU_TYPE_NOT_ALLOWED="This is a reserved menutype."
 COM_MENUS_METADATA_FIELDSET_LABEL="Metadata Options"
+; in the following string
+; %1$s is for module title, %2$s is for access-title, %3$s is for position
+COM_MENUS_MODULE_ACCESS_POSITION="%1$s <small>(%2$s in %3$s)</small>"
 COM_MENUS_MODULE_SHOW_VARIES="Varies"
 COM_MENUS_N_ITEMS_CHECKED_IN_0="No menu item successfully checked in"
 COM_MENUS_N_ITEMS_CHECKED_IN_1="%d menu item successfully checked in"
